tests/router/ui/stack_aggregate_saga.stderr
error: #[aggregate] cannot coexist with #[saga] on the same impl; exactly one of #[aggregate] / #[saga] / #[process_manager] / #[projector] is allowed
 --> tests/router/ui/stack_aggregate_saga.rs:7:1
  |
7 | #[aggregate(domain = "x", state = State)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `aggregate` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `saga`
 --> tests/router/ui/stack_aggregate_saga.rs:1:33
  |
1 | use angzarr_client::{aggregate, saga};
  |                                 ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
